# lingshu

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  project_memory.md  start.bat  vitest.workspace.ts
backend/: package.json  tsconfig.json  vitest.config.ts
backend/scripts/: check-metadata.ts  generate-tool-metadata.ts
backend/src/: server.test.ts  server.ts  soul-bridge.test.ts  soul-bridge.ts
backend/src/agent/: acceptance.test.ts  acceptance.ts  awareness.test.ts  awareness.ts  goal.test.ts  goal.ts  main-loop.test.ts  main-loop.ts  permission-coordinator.test.ts  permission-coordinator.ts  verifier.test.ts  verifier.ts
backend/src/config/: constants.ts
backend/src/db/: config-repo.test.ts  config-repo.ts  session-repo.test.ts  session-repo.ts  sqlite.test.ts  sqlite.ts
backend/src/envelopes/: tool-call.test.ts  tool-call.ts
docs/: project-state.md
electron/: electron-builder.yml  electron.vite.config.ts  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
electron/scripts/: run-electron-vite.js
scripts/: check-tests-count.ts  e2e-full-stack.test.ts
soul/: README.md  pyproject.toml
soul/src/soul/: __init__.py  api.py  awakening.py  bootstrap.py  continuity.py  self_model.py  test_api.py  test_awakening.py  test_bootstrap.py  test_continuity.py  test_health.py  test_memory_http.py  test_self_model.py
soul/src/soul/memory/: __init__.py  long_term.py  short_term.py  test_long_term.py  test_long_term_concurrency.py  test_short_term.py
soul/tests/: __init__.py  conftest.py  test_auth.py
(+211 files in other folders)
