[project]
name = "soul"
version = "0.1.0"
description = "灵枢 AI 核心 — Python sidecar"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/soul"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src", "tests"]
asyncio_mode = "auto"
